--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
         </tbody>
     </table>
 
-    <div class="add-sheets-container" style="padding-left: 10px; background-color: white; position: fixed; bottom: 0; left:0; right: 0; height: 50px; display: flex; align-items: center; gap:20px;">
+    <div class="add-sheets-container" style="padding-left: 10px; background-color: white; position: fixed; bottom: 0; left:0; right: 0; height: 50px; display: flex; align-items: center; gap:20px; cursor: pointer;">
         <div class="add-sheet-btn" onclick="addSheet()"><span class="material-icons">
             post_add
         </span></div>
-        <div style="text-decoration: underline;" onclick="sheetSelect(0)">Sheet1</div>
+        <div style="text-decoration: underline; cursor: pointer;" onclick="sheetSelect(0)">Sheet1</div>
     </div>
     <script src="./script.js"></script>
 </body>
